--- a/it/contatti.html
+++ b/it/contatti.html
@@ -8,7 +8,10 @@
 
         <link rel="stylesheet" href="../CSS/contatti-style.css">
         <link rel="stylesheet" href="../CSS/general-style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     </head>
     
     <body>
@@ -31,7 +34,7 @@
         <nav class="menu-overlay">
             <ul class="menu">
                 <li><a href="../index.html" class="link">Home</a></li>
-                <li><a href="azienda.html">Chi siamo</a></li>
+                <li><a href="chi-siamo.html">Chi siamo</a></li>
                 <li><a href="prodotti.html">Prodotti</a></li>
                 <li><a href="news.html">News</a></li>
                 <li><a href="contatti.html">Contatti</a></li>
