--- a/it/index.html
+++ b/it/index.html
@@ -35,7 +35,7 @@
             <ul class="menu">
                 <li><a href="index.html" class="link">Home</a></li>
                 <!-- MODIFICARE I LINK EVENTUALMENTE -->
-                <li><a href="azienda.html">Chi siamo</a></li>
+                <li><a href="chi-siamo.html">Chi siamo</a></li>
                 <li><a href="prodotti.html">Prodotti</a></li>
                 <li><a href="news.html">News</a></li>
                 <li><a href="contatti.html">Contatti</a></li>
@@ -89,7 +89,7 @@
                 <div class="info-card">
                     <h3>Chi siamo</h3>
                     <p>Scopri la nostra storia e le nostre competenze nel settore del legno.</p>
-                    <a href="azienda.html">Leggi di più</a>
+                    <a href="chi-siamo.html">Leggi di più</a>
                 </div>
                 <div class="info-card">
                     <h3>Prodotti</h3>
